# SSM-Compiler

./: .gitignore  LICENSE  README.md  TODO.txt  compiler.cabal
compiler/: Main.hs
lsp/: Main.hs
spl_examples/custom/: deep_copy.spl  demo.spl  empty_list.spl  if_else.spl  is_empty.spl  poly.spl  print_list.spl  print_pair.spl  recursion.spl  simpleTest.spl  test.spl  test2.spl  test3.spl
src/compiler/: ast.hs  graph.hs  main.hs  parser.hs  position.hs  scanner.hs  ssm.hs  token.hs  typedast.hs  unification.hs
src/lsp/: handlers.hs  server.hs  state.hs  util.hs
